@@ -10,12 +10,15 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.TimeUnit;
 
+import bootstrap.Bootstrap;
 import com.github.dockerjava.api.command.BuildImageResultCallback;
 import com.github.dockerjava.api.command.CreateContainerResponse;
 import com.github.dockerjava.api.model.Bind;
 import com.github.dockerjava.api.model.HostConfig;
 import metrics.integration.MetricsTestNet;
 import model.lightchain.Identifier;
+import modules.logger.LightchainLogger;
+import modules.logger.Logger;
 import network.p2p.proto.StorageOuterClass;
 
 /**
@@ -36,6 +39,8 @@ public class LocalTestNet extends MetricsTestNet {
   private static final String NODE_VOLUME_BINDING = "server_volume:/app";
   private static final String NODE_DOCKER_FILE = "./DockerfileNode";
 
+  private final Logger logger = LightchainLogger.getLogger(Bootstrap.class.getCanonicalName());
+
   private int nodeCount;
 
   public LocalTestNet() {
@@ -48,7 +53,10 @@ public class LocalTestNet extends MetricsTestNet {
 
   /**
    * Creates and returns HTTP Server container that serves as the local testnet.
+   *
+   * Deprecated: contains a sample MVP server that is not used in the testnet.
    */
+  @Deprecated
   private CreateContainerResponse createServerContainer() {
     // Volume Creation
     this.createVolumesIfNotExist(SERVER_VOLUME);
@@ -79,16 +87,18 @@ public class LocalTestNet extends MetricsTestNet {
    * Creates and runs a metrics collection network accompanied by a metrics generator server.
    */
   public void runLocalTestNet() {
-    super.runMetricsTestNet();
+    this.logger.info("creating local testnet");
+    this.logger.info("creating metrics collection network");
 
-    System.out.println("building local testnet, please wait ....");
+//    super.runMetricsTestNet();
+//
+//    this.logger.info("metrics collection network created");
+//    this.logger.info("creating node containers");
 
-    CreateContainerResponse httpServer = this.createServerContainer();
-    dockerClient
-        .startContainerCmd(httpServer.getId())
-        .exec();
+    createNodeContainers();
 
-    System.out.println("local testnet is up and running!");
+    this.logger.info("node containers created");
+    this.logger.info("local testnet created");
   }
 
   /**
@@ -97,32 +107,31 @@ public class LocalTestNet extends MetricsTestNet {
   public void createNodeContainers() {
     String imageId = LOCAL_DOCKER_REGISTRY + LIGHTCHAIN_IMAGE;
     if (dockerClient.pullImageCmd(imageId) == null) {
-      System.out.println("no local image found, building one, it takes time!");
+      // alternatively, you may run docker-build-lightchain to build the image.
+      this.logger.warn("could not find image {} in local registry", imageId);
+      this.logger.warn("building lightchain images from Dockerfile, this may take a while...");
+
       imageId = dockerClient.buildImageCmd()
-          .withTags(new HashSet<>(Arrays.asList("image")))
+          .withTags(new HashSet<>(List.of("image")))
           .withDockerfile(new File(NODE_DOCKER_FILE))
           .withPull(true)
           .exec(new BuildImageResultCallback())
           .awaitImageId();
-      System.out.println("image built up!");
-    }
-    // Node Container
 
+      this.logger.info("lightchain image built, image id: {}", imageId);
+    }
 
     List<Bind> serverBinds = new ArrayList<>();
     serverBinds.add(Bind.parse(NODE_VOLUME_BINDING));
-
     HostConfig hostConfig = new HostConfig()
         .withBinds(serverBinds)
         .withNetworkMode(NETWORK_NAME);
-
     ArrayList<CreateContainerResponse> containers = new ArrayList<>();
 
     for (int i = 0; i < nodeCount; i++) {
-      // Volume Creation
       this.createVolumesIfNotExist("NODE_VOLUME_" + i);
 
-      System.out.println("building local node " + i + " , please wait ....");
+      logger.info("creating node container {}", i);
 
       CreateContainerResponse nodeServer = this.dockerClient
           .createContainerCmd(imageId)
@@ -132,6 +141,8 @@ public class LocalTestNet extends MetricsTestNet {
           .withCmd("NODE" + i, "bootstrap.txt")
           .exec();
       containers.add(nodeServer);
+
+      logger.info("node container {} created", i);
     }
 
     super.runMetricsTestNet();
@@ -140,11 +151,14 @@ public class LocalTestNet extends MetricsTestNet {
     for (int i = 0; i < nodeCount; i++) {
       int finalI = i;
       containerThreads[i] = new Thread(() -> {
+        this.logger.info("starting node container {}", finalI);
+
         dockerClient
             .startContainerCmd(containers.get(finalI).getId())
             .exec();
         this.containerLogger.registerLogger(containers.get(finalI).getId());
-        System.out.println("Node " + finalI + " is up and running!");
+
+        this.logger.info("node container {} started", finalI);
       });
     }
 
